# largest-tmpfs

./: .travis.yml  BUILD.bazel  CMakeLists.txt  COPYING  README.md  create-config.h.sh  fuzz.c  get-version.sh  largest-ramfs.c  largest-ramfs.h  largest-tmpfs.bzl  largest-tmpfs.c  largest-tmpfs.h  liblargest-tmpfs.pc.in  main.c  meson.build
ci/: travis-setup-osx.sh  travis-test.sh
fuzz/: mounts.dict
fuzz/input/: etc-mnttab-sunos  etc-vfstab-sunos  proc-mounts-linux  proc-mounts-netbsd
