cc_library(
    name = "lib/largest-ramfs",
    srcs = ["largest-ramfs.c"],
    hdrs = ["largest-ramfs.h"],
    visibility = ["//visibility:private"],
)

cc_binary(
    name = "largest-ramfs",
    srcs = ["main.c"],
    deps = [":lib/largest-ramfs"],
)

cc_library(
    name = "largest-ramfs-inc",
    hdrs = ["largest-ramfs.c", "largest-ramfs.h"],
)

cc_binary(
    name = "largest-ramfs-fuzz",
    srcs = ["fuzz.c"],
    deps = ["largest-ramfs-inc"],
)
