cc_library(
    name = "lib/largest-tmpfs",
    srcs = ["largest-tmpfs.c"],
    hdrs = ["largest-tmpfs.h"],
    visibility = ["//visibility:private"],
)

cc_binary(
    name = "largest-tmpfs",
    srcs = ["main.c"],
    deps = [":lib/largest-tmpfs"],
)

cc_library(
    name = "largest-tmpfs-inc",
    hdrs = ["largest-tmpfs.c", "largest-tmpfs.h"],
)

cc_binary(
    name = "largest-tmpfs-fuzz",
    srcs = ["fuzz.c"],
    deps = ["largest-tmpfs-inc"],
)
